release 0.8 (2008-06-20 or 2008-07-25)
- The annotation com.sun.jersey.api.representation.FormParam can be used
  to access form-based parameters using the same rules as other parameter-based
  annotatons.
  Form-based resource methods MUST contain only annotated method parameters
  and at least one parameter MUST be annotated with FormParam.  
- Renamed com.sun.jersey.spi.service.Component.Scope enums from->to:
  WebApplication -> Singleton; and ApplicationDefined -> PerRequest
- Unified injection interfaces so that they are independent of where 
  injection occurs. See the package com.sun.jersey.spi.inject.
  - com.sun.jersey.spi.resource.Inject moved to com.sun.jersey.spi.inject.Inject
- Simple asynchronous client API returning Future<T>. Current implementation
  utilizes one thread per-request.
- Moved com.sun.ws.rest.impl.json.JSONJAXBContext to
  com.sun.jersey.api.json.JSONJAXBContext.
- Removed JAX-WS container.
- Set<T> and SortedSet<T> can be used in addition to List<T> for the type of
  @*Param annotation parameters.
- Packages "com.sun.ws.rest.api.*" renamed to "com.sun.jersey.api.*"
- Packages "com.sun.ws.rest.spi.*" renamed to "com.sun.jersey.spi.*"
- The property/feature name space "com.sun.ws.rest.config" renamed to 
  "com.sun.jersey.config".
- The type javax.xml.bind.JAXBElement<T> can be used for XML and JSON
  serialization.
- Partially Integrated JSR 311 API 0.8
  - MediaType.parse renamed to MediaType.valueOf
  - NewCookie.parse renamed to NewCookie.valueOf
  - Cookie.parse renamed to Cookie.valueOf
  - CacheControl.parse renamed to CacheControl.valueOf
  - EntityTag.parse renamed to EntityTag.valueOf
  - UriInfo.getTemplateParameters renamed to UriInfo.getPathParameters
  - ApplicationConfig.getExtensibleMapping renamed to 
    ApplicationConfig.getMediaTypeMappings
  - Method parameter order of MessageBodyReader.readFrom has changed to be
    consistent with the method parameter order of MessageBodyWriter.writerTo.

release 0.7 (2008-04-18)