@@ -1,4 +1,5 @@
 release 0.8 (2008-06-20 or 2008-07-25)
+- com.sun.jersey.api.uri.ExtendedUriInfo can be injected.
 - The annotation com.sun.jersey.api.representation.FormParam can be used
   to access form-based parameters using the same rules as other parameter-based
   annotatons.
